--- a/view/invoice_line_tree.xml
+++ b/view/invoice_line_tree.xml
@@ -1,5 +1,5 @@
 <data>
-    <xpath expr="/tree/field[@name='discount']" position="replace">
+    <xpath expr="/tree/field[@name='unit_price']" position="after">
         <field name="discount1" factor="100">
             <suffix string="%"/>
         </field>
