--- a/view/invoice_line_tree.xml
+++ b/view/invoice_line_tree.xml
@@ -1,12 +1,12 @@
 <data>
     <xpath expr="/tree/field[@name='discount']" position="after">
-        <field name="discount1" factor="100">
+        <field name="discount1" factor="100" optional="0">
             <suffix name="discount1" string="%"/>
         </field>
-        <field name="discount2" factor="100">
+        <field name="discount2" factor="100" optional="0">
             <suffix name="discount2" string="%"/>
         </field>
-        <field name="discount3" factor="100">
+        <field name="discount3" factor="100" optional="0">
             <suffix name="discount3" string="%"/>
         </field>
     </xpath>
